Create the registers forms for candidat, consultant et recruteur

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -27,7 +27,7 @@
         <a type="button" class="btn" href="">Annonces</a>
     {% endif %}  
     </div>
-    {% block main %}
+    {% block body %}
    <br>
     <div class="fond-gris centre announcement"> 
     <div> 
