--- a/templates/recruteur/index.html.twig
+++ b/templates/recruteur/index.html.twig
@@ -1,12 +1,12 @@
 {% extends 'index.html.twig' %}
 
-{% block title %}Recruteur index{% endblock %}
+{% block title %}Recruteurs index{% endblock %}
 
 {% block body %}
-    <h1>Recruteur index</h1>
-    <a type="button" href="{{ path('app_recruteur_index_valid', {'actif': 0}) }}">Recruteurs en attente</a>
-    <a type="button" href="{{ path('app_recruteur_index_valid', {'actif': 1}) }}">Recruteurs validés</a>
-    <a type="button" href="{{ path('app_recruteur_index') }}">Tous les recruteurs</a>
+    <h1>Recruteurs index</h1>
+    <a type="button" class="btn" href="{{ path('app_recruteur_index_valid', {'actif': 0}) }}">Recruteurs en attente</a>
+    <a type="button" class="btn" href="{{ path('app_recruteur_index_valid', {'actif': 1}) }}">Recruteurs validés</a>
+    <a type="button" class="btn" href="{{ path('app_recruteur_index') }}">Tous les recruteurs</a>
     <table class="table">
         <thead>
             <tr>
@@ -32,11 +32,9 @@
                 <td>{{ recruteur.actif ? 'ok' :'en attente' }}</td>
                 <td>
                     {% if not recruteur.actif %}
-                    <a type="button" href="{{ path('app_recruteur_makeActive', {'id': recruteur.id}) }}">valider</a>
+                    <a type="button" class="btn" href="{{ path('app_recruteur_makeActive', {'id': recruteur.id}) }}">valider</a>
                     {% endif %}
-                    <a type="button" href="{{ path('app_recruteur_show', {'id': recruteur.id}) }}">show</a>
-                    
-                    <a type="button" href="{{ path('app_recruteur_edit', {'id': recruteur.id}) }}">edit</a>
+                    <a type="button" class="btn" href="{{ path('app_recruteur_show', {'id': recruteur.id}) }}">show</a>
                 </td>
             </tr>
         {% else %}
@@ -47,5 +45,5 @@
         </tbody>
     </table>
 
-    <a type="button" href="{{ path('app_recruteur_new') }}">Create new</a>
+    <a type="button" class="btn" href="{{ path('app_recruteur_new') }}">Create new</a>
 {% endblock %}
