add cv uploader in candidat form and test

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -43,7 +43,7 @@
      Vous n'avez pas encore de compte ? Créez-le !
     <a type="button" class="btn register" href="{{ path('app_registerRecruteur') }}">Vous êtes recruteur</a>
     ou
-    <a type="button" class="btn register" href="/">Vous êtes candidat</a>
+    <a type="button" class="btn register" href="{{ path('app_registerCandidat') }}">Vous êtes candidat</a>
     </div>
     {% endblock %}
 {% endblock %}
