Change user entity to get candidat and recruteur from user id Create super_admin and consultant accounts , and allow quper admin to add new consultant

--- a/public/style/global.css
+++ b/public/style/global.css
@@ -84,7 +84,9 @@ div.register {
   font-size: 5rem;
 }
 
-
+.btn.register.long {
+  width: 90vw;
+}
 table {
     font-size: 2rem;
     font-weight: bold;
