--- a/templates/annonce/show.html.twig
+++ b/templates/annonce/show.html.twig
@@ -29,14 +29,14 @@
             </tr>
             <tr>
                 <th>Postulants</th>
-                <td>{{ postulant }}</td>
+                <td>{{ annonce.postulant }}</td>
             </tr>
         </tbody>
     </table>
+{% if app.user and "ROLE_RECRUTEUR" in app.user.roles %}
+    <a type="button" class="btn" href="{{ path('app_annonce_index') }}">back to list</a>
 
-    <a href="{{ path('app_annonce_index') }}">back to list</a>
-
-    <a href="{{ path('app_annonce_edit', {'id': annonce.id}) }}">edit</a>
-
+    <a type="button" class="btn" href="{{ path('app_annonce_edit', {'recruteur': app.user.getRecruteur.id,'id': annonce.id}) }}">edit</a>
+{% endif  %}
     {{ include('annonce/_delete_form.html.twig') }}
 {% endblock %}
