--- a/templates/candidat/edit.html.twig
+++ b/templates/candidat/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('candidat/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_candidat_index') }}">back to list</a>
+    <a type="button" class="btn" href="{{ path('app_candidat_index') }}">back to list</a>
 
     {{ include('candidat/_delete_form.html.twig') }}
 {% endblock %}
