--- a/templates/candidat/new.html.twig
+++ b/templates/candidat/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('candidat/_form.html.twig') }}
 
-    <a href="{{ path('app_candidat_index') }}">back to list</a>
+    <a type="button" class="btn" href="{{ path('app_candidat_index') }}">back to list</a>
 {% endblock %}
