--- a/templates/candidat/show.html.twig
+++ b/templates/candidat/show.html.twig
@@ -12,6 +12,18 @@
                 <td>{{ candidat.id }}</td>
             </tr>
             <tr>
+                <th>Nom</th>
+                <td>{{ candidat.userid.nom }}</td>
+            </tr>
+            <tr>
+                <th>Prénom</th>
+                <td>{{ candidat.userid.prenom }}</td>
+            </tr>
+            <tr>
+                <th>Email</th>
+                <td>{{ candidat.userid.email }}</td>
+            </tr>
+            <tr>
                 <th>Cvname</th>
                 <td>{{ candidat.cvname }}</td>
             </tr>
