--- a/templates/postulant/index.html.twig
+++ b/templates/postulant/index.html.twig
@@ -24,12 +24,10 @@
                 <td>{{ postulant.getAnnonce[0].getRecruteur.getEntreprise }}</td>
                 <td>{{ postulant.getAnnonce[0].intitule }}</td>
                 <td>{{ postulant.getAnnonce[0].lieu }}</td>
-                
                 <td>{{ postulant.getAnnonce[0].description }}</td>
-                <td>{{ postulant.valide ? 'Yes' : 'No' }}</td>
+                <td>{{ postulant.valide ? 'Transmis' : 'En attente' }}</td>
                 <td>
-                    <a href="{{ path('app_postulant_show', {'id': postulant.id}) }}">show</a>
-                    <a href="{{ path('app_postulant_edit', {'id': postulant.id}) }}">edit</a>
+                    <a type="button" class="btn" href="{{ path('app_annonce_show_candidat', {'id': postulant.getAnnonce[0].id}) }}">Voir</a>
                 </td>
             </tr>
         {% else %}
@@ -39,6 +37,4 @@
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('app_postulant_new') }}">Create new</a>
 {% endblock %}
