Set access to consultants views

--- a/templates/annonce/index.html.twig
+++ b/templates/annonce/index.html.twig
@@ -13,6 +13,9 @@
                 <th>Lieu</th>
                 <th>Description</th>
                 <th>Visible</th>
+                {% if is_granted("ROLE_CONSULTANT") %}
+                <th>Nombre de postulant(s)</th>
+                {% endif %}
                 <th>Actions</th>
             </tr>
         </thead>
@@ -24,13 +27,16 @@
                 <td>{{ annonce.lieu }}</td>
                 <td>{{ annonce.description }}</td>
                 <td>{{ annonce.visible ? 'Yes' : 'No' }}</td>
+                {% if is_granted("ROLE_CONSULTANT") %}
+                    <td>{{ annonce.getPostulants|length }}</td>
+                {% endif %}
                 <td> 
-                    {% if app.user and "ROLE_RECRUTEUR" in app.user.roles %}
+                    {% if is_granted("ROLE_RECRUTEUR") %}
                         <a type="button" class="btn" href="{{ path('app_annonce_show', {'recruteur': app.user.getRecruteur.id,'id': annonce.id}) }}">Voir</a>
                         <a type="button" class="btn" href="{{ path('app_annonce_edit', {'recruteur': app.user.getRecruteur.id,'id': annonce.id}) }}">edit</a>
-                    {% elseif app.user and "ROLE_CANDIDAT" in app.user.roles %}
+                    {% elseif is_granted("ROLE_CANDIDAT") %}
                         <a type="button" class="btn" href="{{ path('app_annonce_apply', {'candidat': app.user.getCandidat.id,'id': annonce.id}) }}">Postuler</a>
-                    {% elseif app.user and "ROLE_CONSULTANT" in app.user.roles %}
+                    {% elseif is_granted("ROLE_CONSULTANT") %}
                         <a type="button" class="btn" href="{{ path('app_annonce_show', {'recruteur': annonce.getRecruteur.id,'id': annonce.id}) }}">Voir</a>
                         <a type="button" class="btn" href="{{ path('app_annonce_makeVisible', { 'id': annonce.id, 'visible': (annonce.visible ? 0 : 1)}) }}">{{ annonce.visible ? 'Retirer' : 'Valider' }}</a>
                     {% endif %}
@@ -43,7 +49,7 @@
         {% endfor %}
         </tbody>
     </table>
-    {% if app.user and "ROLE_RECRUTEUR" in app.user.roles %}
+    {% if is_granted("ROLE_RECRUTEUR") %}
     <a type="button" class="btn" href="{{ path('app_annonce_new', {'recruteur': app.user.getRecruteur.id}) }}">Create new</a>
     {% endif %}
 {% endblock %}
