--- a/templates/annonce/show.html.twig
+++ b/templates/annonce/show.html.twig
@@ -27,25 +27,32 @@
                 <th>Visible</th>
                 <td>{{ annonce.visible ? 'Yes' : 'No' }}</td>
             </tr>
-            {% if app.user and "ROLE_RECRUTEUR" in app.user.roles %}
+            {% if is_granted("ROLE_CONSULTANT") or is_granted("ROLE_RECRUTEUR") %}
             <tr>
                 <th>Postulants</th>
                 <td>
                 {% for postulant in annonce.postulants %}
-                {% if postulant.valide %}
-                {% for candidat in postulant.candidat %}
-                <a type="button" class="btn" href="{{ path('app_candidat_show', {'id': candidat.id}) }}">
-                {{ candidat }}
-                </a>
-                {% endfor %}
-                {% endif %}
+                    {% if postulant.valide or is_granted("ROLE_CONSULTANT") %}
+                    
+                        {% for candidat in postulant.candidat %}
+                            <a type="button" class="btn" href="{{ path('app_candidat_show', {'id': candidat.id}) }}">
+                            
+                            {{ candidat }}
+                            </a><a type="button" class="btn" href="{{ asset('/uploads/article_image/')  }}{{ candidat.cvName}}" download="{{ candidat.cvName }}">Télécharger son CV</a>
+                            {% if is_granted("ROLE_CONSULTANT") %}
+                                <a type="button" class="btn" href="{{ path('app_postulant_validation', {'id': postulant.id, 'valid' : (postulant.valide ? 0 : 1)}) }}">{{postulant.valide ? 'Invalider le candidat' : 'Valider le candidat'}}</a>
+                            {% endif %}
+                            {{ postulant.valide ? 'oui' : 'non'}}
+                            <br>
+                        {% endfor %}
+                    {% endif %}
                 {% endfor %}
                 </td>
             </tr>
             {% endif %}
         </tbody>
     </table>
-{% if app.user and "ROLE_RECRUTEUR" in app.user.roles %}
+{% if is_granted("ROLE_RECRUTEUR") %}
     <a type="button" class="btn" href="{{ path('app_annonce_index') }}">back to list</a>
     <a type="button" class="btn" href="{{ path('app_annonce_edit', {'recruteur': app.user.getRecruteur.id,'id': annonce.id}) }}">edit</a>
     {{ include('annonce/_delete_form.html.twig') }}
