--- a/templates/candidat/show.html.twig
+++ b/templates/candidat/show.html.twig
@@ -35,8 +35,8 @@
     </table>
 
     <a type="button" class="btn" href="{{ path('app_candidat_index') }}">back to list</a>
-
-    <a type="button" class="btn" href="{{ path('app_candidat_edit', {'id': candidat.id}) }}">edit</a>
-
+    {% if is_granted("ROLE_CANDIDAT") %}
+        <a type="button" class="btn" href="{{ path('app_candidat_edit', {'id': candidat.id}) }}">edit</a>
+    {% endif %}
     {{ include('candidat/_delete_form.html.twig') }}
 {% endblock %}
