--- a/templates/registration/registerRecruteur.html.twig
+++ b/templates/registration/registerRecruteur.html.twig
@@ -12,6 +12,6 @@
         }) }}
         {{ form_row(registrationRecruteurForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
+        <button class="btn" type="submit" class="btn">Register</button>
     {{ form_end(registrationRecruteurForm) }}
 {% endblock %}
